[project]
name = "ai-customurl"
description = "A comprehensive ComfyUI extension that enables text, image, video, and speech generation using any OpenAI-compatible API endpoint with custom URLs."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# AI CustomURL Extension for ComfyUI", "# Core dependencies", "requests>=2.31.0", "aiohttp>=3.9.0", "pillow>=10.0.0", "numpy>=1.24.0", "torch>=2.0.0", "torchaudio>=2.0.0", "opencv-python>=4.8.0", "# Optional but recommended", "typing-extensions>=4.8.0"]

[project.urls]
Repository = "https://github.com/bowtiedbluefin/ComfyUI-AI-CustomURL"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/bowtiedbluefin/ComfyUI-AI-CustomURL/wiki"
"Bug Tracker" = "https://github.com/bowtiedbluefin/ComfyUI-AI-CustomURL/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-AI-CustomURL"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

